# libspinscale-cpp-coroutines-mock

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile.in  README.md  configure  configure.ac  gdb-batch.txt  main.cpp
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
ctestcore/: CMakeLists.txt  componentThread.cpp  harnessComponent.cpp
ctestcore/body/: body.cpp
ctestcore/harness/: harness.cpp
ctestcore/include/: componentThread.h  harnessComponent.h  harnessThread.h
ctestcore/include/body/: body.h
ctestcore/include/harness/: harness.h
ctestcore/include/leg/: leg.h
ctestcore/include/marionette/: marionette.h
ctestcore/include/test/: marionetteTestRunner.h
ctestcore/include/world/: world.h
ctestcore/leg/: leg.cpp
ctestcore/marionette/: lifetime.cpp  main.cpp
ctestcore/test/: marionetteTestRunner.cpp
ctestcore/world/: world.cpp
docs/: caller-posts-to-own-io-context.md  caller-pull-own-schedHandle.md  group-return-values.md  posting-promise-parameterization.md  structured-concurrency.md
docs/prompts/: coro-condvars-in-promise.md  post-to-and-back-in-invokables.md
src/: CMakeLists.txt  Makefile.am  Makefile.in  awaitable-returnable-to-caller.cpp  childThreads.cpp  childThreads.h  coConditionVariable.h  coQutex.h  coroutinesTestLanes.cpp  coroutinesTestLanes.h  current_io_context.h  get_ret_obj_must_return_awaitable.cpp  group.h  group_edge_test.cpp  group_smoke.cpp  group_timer_test.cpp  invokers.h  postingInvoker.h  promiseChainLink.h  promiseChainWalker.h  promises.h  sharedResourceGroup.h  spinlock.h  sync-main-drives-continuation  sync_main_drives_continuation.cpp
tests/: group_edge_test.cpp  group_smoke.cpp  group_timer_test.cpp  sync_main_drives_continuation.cpp  viral_non_posting_test.cpp
