bin_PROGRAMS = \
	sync-main-drives-continuation
#	awaitable-returnable-to-caller
#	get-ret-obj-must-return-awaitable

AM_CXXFLAGS = -Wall -Wextra -pedantic
AM_CPPFLAGS = @BOOST_CPPFLAGS@
AM_LDFLAGS = @BOOST_LDFLAGS@

# awaitable_returnable_to_caller_SOURCES = awaitable-returnable-to-caller.cpp
# get_ret_obj_must_return_awaitable_SOURCES = get_ret_obj_must_return_awaitable.cpp
sync_main_drives_continuation_SOURCES = sync_main_drives_continuation.cpp
